WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251710
[ macOS ] webaudio/AudioBuffer/huge-buffer.html is a flaky time out.
https://bugs.webkit.org/show_bug.cgi?id=251710
Summary
[ macOS ] webaudio/AudioBuffer/huge-buffer.html is a flaky time out.
Bri Harris
Reported
2023-02-03 11:52:56 PST
webaudio/AudioBuffer/huge-buffer.html is a flaky time out on macOS. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=webaudio%2FAudioBuffer%2Fhuge-buffer.html
I was able to replicate this time out as follows: run-webkit-test webaudio/AudioBuffer/huge-buffer.html --iterations 10 DIFF TEXT: @@ -1,3 +1,5 @@ +FAIL: Timed out waiting for notifyDone to be called + PASS # AUDIT TASK RUNNER STARTED. PASS Executing "huge buffer"
Attachments
Add attachment
proposed patch, testcase, etc.
Bri Harris
Comment 1
2023-02-03 11:56:19 PST
This test has started to switch between timing out and crashing. It has been an ongoing issue since 2022 and was previously filed here.
webkit.org/b/240081
Radar WebKit Bug Importer
Comment 2
2023-02-03 17:39:18 PST
<
rdar://problem/105028032
>
Bri Harris
Comment 3
2023-02-03 17:48:31 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9639
EWS
Comment 4
2023-02-03 17:52:30 PST
Test gardening commit
259849@main
(dfaad8106eb9): <
https://commits.webkit.org/259849@main
> Reviewed commits have been landed. Closing PR #9639 and removing active labels.
EWS
Comment 5
2023-02-23 09:14:03 PST
Test gardening commit
259548.262@safari-7615-branch
(be460012452d): <
https://commits.webkit.org/259548.262@safari-7615-branch
> Reviewed commits have been landed. Closing PR #409 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 6
2023-03-09 22:05:56 PST
the test attempts to allocate 32GB in block of 4GB, it's just slow
Jean-Yves Avenard [:jya]
Comment 7
2023-03-13 17:39:36 PDT
***
Bug 232726
has been marked as a duplicate of this bug. ***
Jean-Yves Avenard [:jya]
Comment 8
2023-03-13 20:28:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11476
EWS
Comment 9
2023-03-14 00:58:15 PDT
Committed
261617@main
(114b7b67616c): <
https://commits.webkit.org/261617@main
> Reviewed commits have been landed. Closing PR #11476 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug