Cherry-pick 261617@main (114b7b67616c). https://bugs.webkit.org/show_bug.cgi?id=251710

[ macOS ] webaudio/AudioBuffer/huge-buffer.html is a flaky time out.
    https://bugs.webkit.org/show_bug.cgi?id=251710
    rdar://105028032

    Reviewed by Jer Noble.

    In r243819, the individual size of an audio channel was limited to 2^30
    float samples, however an AudioBuffer can be made to have a high number
    of channels.
    The webaudio/AudioBuffer/huge-buffer.html test attempts to allocate an
    AudioBuffer made of 32 channels with 2^30 float samples, this would require 2^37 bytes.
    We limit the total size of an AudioBuffer to 2^32 float samples (2^34 bytes).

    * LayoutTests/platform/glib/TestExpectations:
    * LayoutTests/platform/ios/TestExpectations:
    * LayoutTests/platform/mac/TestExpectations:
    * Source/WebCore/Modules/webaudio/AudioBuffer.cpp:
    (WebCore::AudioBuffer::AudioBuffer):
    * Source/WebCore/Modules/webaudio/AudioBuffer.h:

    Canonical link: https://commits.webkit.org/261617@main